--- a/tailwind.config.css
+++ b/tailwind.config.css
@@ -3,26 +3,24 @@
  * Normalize.css and some additional base styles.
  *
  * You can see the styles here:
- * https://github.com/tailwindcss/tailwindcss/blob/master/css/preflight.css
+ * https://github.com/tailwindcss/tailwindcss/blob/master/css/base.css
  *
  * If using `postcss-import`, use this import instead:
  *
- * @import "tailwindcss/preflight";
+ * @import "tailwindcss/base";
  */
+ @tailwind base;
 
-@tailwind preflight;
-
-/**
+ /**
   * This injects any component classes registered by plugins.
   *
   * If using `postcss-import`, use this import instead:
   *
   * @import "tailwindcss/components";
   */
-
-@tailwind components;
-
-/**
+ @tailwind components;
+ 
+ /**
   * Here you would add any of your custom component classes; stuff that you'd
   * want loaded *before* the utilities so that the utilities could still
   * override them.
@@ -37,9 +35,8 @@
   * @import "components/buttons";
   * @import "components/forms";
   */
-
-
-/**
+ 
+ /**
   * This injects all of Tailwind's utility classes, generated based on your
   * config file.
   *
@@ -47,10 +44,9 @@
   *
   * @import "tailwindcss/utilities";
   */
-
-@tailwind utilities;
-
-/**
+ @tailwind utilities;
+ 
+ /**
   * Here you would add any custom utilities you need that don't come out of the
   * box with Tailwind.
   *
@@ -64,3 +60,4 @@
   * @import "utilities/background-patterns";
   * @import "utilities/skew-transforms";
   */
+ 
